# continual-music-classification

./: .gitignore  .pre-commit-config.yaml  README.md  config.py  execute_experiment.py  execute_experiment_check.py  experiments.py  experiments_individual_tasks.py  music2vec.py  pyproject.toml  requirements.txt  run_experiments.bat  run_experiments.sh  run_experiments_check.bat  run_experiments_check.sh  run_experiments_check_vocalset.bat  run_experiments_clmr.sh  run_experiments_mert.sh  test.py  train.py
base/: types.py
criterias/: __init__.py  criteria.py  torch_cross_entropy_criteria.py
datasets/: __init__.py  extraction_pipeline.py  gtzan_dataset.py
embeddings-experiments/: README.md  generate_embeddings.py  generate_image_embeddings.py  pcc_metrics.ipynb  pcc_metrics_image.ipynb  visualize_embeddings.ipynb  visualize_image_embeddings.ipynb
evaluators/: __init__.py  continual_learning_tasks_evaluator_v2.py  evaluator.py  tasks_evaluator.py
experiment_tracker/: __init__.py  dataframe_experiment_tracker.py  experiment_tracker.py  tensorboard_experiment_tracker.py
experiments/: __init__.py  clmr_gtzan_experiments.py  clmr_nsynth_instrument_experiments.py  clmr_vocalset_experiments.py  clmr_vocalset_techs_experiments.py  components.py  components_clmr.py  experiments.py  gtzan_experiments.py  nsynth_instrument_experiments.py  vocalset_experiments.py  vocalset_techs_experiments.py
final_results/: results.csv  results_all.csv  results_gtzan.csv  results_nsynth.csv  results_vocalsetsinger.csv  results_vocalsettech.csv
final_results_clmr/: results_clmr.csv
(+254 files in other folders)
